--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,113 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    font-family: 'Rajdhani', Arial, sans-serif;
+    font-weight: 500;
+}
+
+/* ////////////// REGISTRATION //////////// REGISTRATION /////////// REGISTRATION ////////////// */
+.welcome-pages-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.welcome,
+.registration-side {
+    padding: 2%;
+    width: 50%;
+    height: 100%;
+}
+
+.welcome {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 80%;
+}
+
+#welcome-title {
+    font-size: 4.5vw;
+    margin-bottom: 80px;
+    letter-spacing: 2px;
+}
+
+.welcome img {
+    width: 70%;
+    margin-bottom: 30px;
+}
+
+#bubc-title {
+    font-size: 3.5vw;
+    background-color: black;
+    letter-spacing: 2px;
+    color: white;
+    padding: 0 10px;
+    margin-top: 30px;
+}
+
+.welcome h2 {
+    font-size: 1.80vw;
+    letter-spacing: 2px;
+    font-weight: 400;
+}
+
+/* side with the reqistration fields __________ side with the registration fields */
+
+.registration-side {
+    background-color: dimgrey;
+    position: relative;
+}
+
+.registration-form {
+    width: 70%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.registration-form h1 {
+    font-size: 4vw;
+    margin-bottom: 40px;
+}
+
+.error-field {
+    height: 20px;
+    margin-bottom: 10px;
+}
+
+.registration-form label {
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.registration-form input {
+    font-size: 22px;
+    padding: 5px 10px;
+    background-color: dimgray;
+    border: 1px solid black;
+    margin-bottom: 20px;
+}
+
+.registration-form input:focus {
+    outline: none;
+    border: 1px solid white;
+}
+
+.registration-form button {
+    font-size: 22px;
+    padding: 5px 10px;
+}
+
 #logo {
     width: 60px;
 }
