styling of welcome pages added

--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
     font-weight: 500;
 }
 
-/* ////////////// REGISTRATION //////////// REGISTRATION /////////// REGISTRATION ////////////// */
+/* ////////////// WELCOME //////////// WELCOME /////////// WELCOME ////////////// */
 .welcome-pages-container {
     width: 100%;
     height: 100vh;
@@ -24,10 +24,17 @@
 
 .welcome {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    height: 80%;
+}
+
+.welcome .welcome-container {
+    width: 80%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #welcome-title {
@@ -36,7 +43,7 @@
     letter-spacing: 2px;
 }
 
-.welcome img {
+.welcome-container img {
     width: 70%;
     margin-bottom: 30px;
 }
@@ -47,37 +54,38 @@
     letter-spacing: 2px;
     color: white;
     padding: 0 10px;
-    margin-top: 30px;
+    margin-top: 50px;
+    white-space: nowrap;
 }
 
-.welcome h2 {
+.welcome-container h2 {
     font-size: 1.80vw;
     letter-spacing: 2px;
     font-weight: 400;
 }
 
-/* side with the reqistration fields __________ side with the registration fields */
+/* side with the REGISTRATION fields __________ side with the REGISTRATION fields */
 
 .registration-side {
     background-color: rgb(121, 121, 121);
-    position: relative;
-}
-
-.registration-form {
-    width: 70%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
-.registration-form h1 {
+.registration-container {
+    width: 80%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    animation: 1.5s ease-out 0s 1 slideInFromRight, 1.5s ease-in-out 0s 1 appear;
+}
+
+
+.registration-container h1 {
     font-size: 4vw;
-    margin-bottom: 40px;
     letter-spacing: 2px;
 }
 
@@ -86,12 +94,23 @@
     margin-bottom: 10px;
 }
 
-.registration-form label {
+.registration-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.registration-form label,
+.login-form label,
+.reset-form label {
     cursor: pointer;
     font-size: 20px;
 }
 
-.registration-form input {
+.registration-form input,
+.login-form input,
+.reset-form input {
     font-size: 22px;
     padding: 5px 10px;
     background-color: rgb(121, 121, 121);
@@ -101,12 +120,18 @@
 }
 
 .registration-form input:focus,
-.registration-form input:hover {
+.registration-form input:hover,
+.login-form input:focus,
+.login-form input:hover,
+.reset-form input:focus,
+.reset-form input:hover {
     outline: none;
     border: 1px solid white;
 }
 
-.registration-form button {
+.registration-form button,
+.login-form button,
+.reset-form button {
     cursor: pointer;
     font-size: 25px;
     font-weight: 600;
@@ -117,21 +142,31 @@
     background-color: rgb(121, 121, 121);
     border: 1px solid rgb(121, 121, 121);
     transition: color 0.3s;
-    margin-bottom: 40px;
     margin-top: 20px;
 }
 
 .registration-form button:hover,
-.registration-form button:focus {
+.registration-form button:focus,
+.login-form button:hover,
+.login-form button:focus,
+.reset-form button:hover,
+.reset-form button:focus {
     outline: none;
     color: white;
 }
 
-.registration-form button:active {
+.registration-form button:active,
+.login-form button:active,
+.reset-form button:active {
     opacity: 0.5;
 }
 
-.log-in-link {
+.registration-container .link-container {
+    height: 25px;
+    position: relative;
+}
+
+.welcome-pages-container .link {
     font-size: 20px;
     text-decoration: none;
     color: black;
@@ -141,17 +176,121 @@
     transition: top 0.5s, color 0.3s;
 }
 
-.log-in-link:hover {
+.welcome-pages-container .link:hover {
     bottom: 3px;
 }
 
-.log-in-link:focus {
+.welcome-pages-container .link:focus {
     color: white;
     outline: none;
 }
 
-.log-in-link:active {
+.welcome-pages-container .link:active {
     opacity: 0.5;
+}
+
+/* LOGIN /////////////////////// LOGIN /////////////////////// LOGIN ///////////////////// LOGIN */
+
+.login-side,
+.reset-password-side {
+    width: 50%;
+    background-color: rgb(121, 121, 121);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2%;
+    height: 100%;
+}
+
+.login-container,
+.reset-password-container {
+    width: 80%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    animation: 1.5s ease-out 0s 1 slideInFromRight, 1.5s ease-in-out 0s 1 appear;
+}
+
+.login-container h1{
+    font-size: 4vw;
+    letter-spacing: 2px;
+    margin-bottom: 70px;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.login-container .link-container {
+    height: 40px;
+    position: relative;
+    padding-top: 50px;
+}
+
+.welcome-pages-container .login-container .password-link {
+    bottom: 30px;
+    transition: top 0.5s, color 0.3s;
+}
+
+.welcome-pages-container .login-container .password-link:hover {
+    bottom: 33px;
+}
+
+/* RESET PASSWPRD ///////////////// RESET PASSWORD /////////// RESET PASSWORD */
+.reset-password-container {
+    position: relative;
+}
+
+.reset-password-container h1 {
+    font-size: 4vw;
+    letter-spacing: 2px;
+    margin-bottom: 70px;
+}
+
+.reset-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.reset-password-container .link-container {
+    height: 40px;
+    position: relative;
+    margin-top: 40px;
+}
+
+.reset-password-container .login-link {
+    bottom: 30px;
+    transition: top 0.5s, color 0.3s;
+}
+
+.reset-password-container .login-link:hover {
+    bottom: 33px;
+}
+
+/* ANIMATIONS ///////////////////// ANIMATIONS //////////////// ANIMATIONS */
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(90%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 /* ////////////// OTHER STUFF //////////////// */
