--- a/public/style.css
+++ b/public/style.css
@@ -39,13 +39,15 @@
 
 #welcome-title {
     font-size: 4.5vw;
-    margin-bottom: 80px;
     letter-spacing: 2px;
 }
 
 .welcome-container img {
-    width: 70%;
-    margin-bottom: 30px;
+    width: 90%;
+}
+
+.network-title-container {
+    text-align: center;
 }
 
 #bubc-title {
@@ -54,7 +56,6 @@
     letter-spacing: 2px;
     color: white;
     padding: 0 10px;
-    margin-top: 50px;
     white-space: nowrap;
 }
 
@@ -98,7 +99,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 30px;
 }
 
 .registration-form label,
@@ -142,7 +142,6 @@
     background-color: rgb(121, 121, 121);
     border: 1px solid rgb(121, 121, 121);
     transition: color 0.3s;
-    margin-top: 20px;
 }
 
 .registration-form button:hover,
@@ -216,20 +215,17 @@
 .login-container h1{
     font-size: 4vw;
     letter-spacing: 2px;
-    margin-bottom: 70px;
 }
 
 .login-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 50px;
 }
 
 .login-container .link-container {
     height: 40px;
     position: relative;
-    padding-top: 50px;
 }
 
 .welcome-pages-container .login-container .password-link {
@@ -295,14 +291,34 @@
 
 /* ////////////// OTHER STUFF //////////////// */
 
+.app-header {
+    border-bottom: 2px solid black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.app-header .profile-pic-container {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.profile-pic {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
 #logo {
     width: 60px;
 }
 
-#profile-pic {
-    width: 70px;
-}
 
-#large-profile-pic {
-    width: 200px;
+.app-profile-container .large-profile-pic-container {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
 }
