--- a/public/style.css
+++ b/public/style.css
@@ -313,12 +313,25 @@
 
 #logo {
     width: 60px;
+    height: 40px;
 }
 
 
-.app-profile-container .large-profile-pic-container {
+.large-profile-pic-container {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     overflow: hidden;
+}
+
+.search-container .search-user-profile-pic-container {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.search-container .result {
+    display: flex;
+    align-items: center;
 }
