--- a/public/style.css
+++ b/public/style.css
@@ -332,16 +332,24 @@
 .app-header .search-users-link {
     display: flex;
     align-items: center;
-    margin-right: 7px;
+    margin-right: 10px;
 }
 
 .app-header .lens-img {
     width: 40px;
 }
 
+.app-header .lens-img:hover {
+    opacity: 0.7;
+}
+
+.app-header .lens-img:active {
+    opacity: 0.5;
+}
+
 .app-header .profile-pic-outline {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     border-radius: 50%;
     border: 2px solid white;
     display: flex;
@@ -354,9 +362,13 @@
     border: 2px solid rgb(121, 121, 121);
 }
 
+.app-header .profile-pic-outline:active {
+    border: 2px solid rgba(121, 121, 121, 0.493);
+}
+
 .app-header .profile-pic-container {
-    width: 36px;
-    height: 36px;
+    width: 39px;
+    height: 39px;
     border-radius: 50%;
     overflow: hidden;
     cursor: pointer;
