--- a/public/style.css
+++ b/public/style.css
@@ -339,13 +339,30 @@
     width: 35px;
 }
 
+.app-header .friends-img-container {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+    background-color: rgb(243, 240, 240);
+}
+
+.app-header .friends-img-container .friends-img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
 .app-header .lens-img:hover,
-.app-profile-container .bio-container .add-bio-btn:hover {
+.app-profile-container .bio-container .add-bio-btn:hover,
+.app-profile-container .bio-container .edit-bio-btn:hover {
     opacity: 0.7;
 }
 
 .app-header .lens-img:active,
-.app-profile-container .bio-container .add-bio-btn:active {
+.app-profile-container .bio-container .add-bio-btn:active,
+.app-profile-container .bio-container .edit-bio-btn:active {
     opacity: 0.5;
 }
 
@@ -383,13 +400,17 @@
 }
 
 /* ANY PROFILE ********************* ANY PROFILE ************** ANY PROFILE ********* */
-.app-profile-container {
+.app-container {
     max-width: 1000px;
-    height: 262px;
     margin: 0 auto;
     padding: 30px 1%;
+}
+
+.app-container .profile-container {
     display: grid;
+    width: 100%;
     grid-template-columns: 1fr 3fr;
+    height: 262px;
     border-bottom: 1px solid rgb(207, 204, 204);
 }
 
@@ -402,52 +423,95 @@
     justify-self: center;
 }
 
-.app-profile-container .profile-text-container {
+.profile-container .profile-text-container {
     font-size: 17px;
 }
 
-.app-profile-container .profile-text-container h1 {
-    font-size: 2.7vw;
-    margin-bottom: 15px;
+.profile-container .profile-text-container h1 {
+    font-size: 28px;
+    margin-bottom: 10px;
 }
 
-.app-profile-container .bio-container .add-bio-btn {
+.profile-container .bio-container .add-bio-btn {
     text-decoration: underline;
     font-size: 17px;
     cursor: pointer;
 }
 
-.app-profile-container .bio-container .bio-editor {
+.profile-container .bio-container .bio-editor {
     max-width: 300px;
     display: flex;
     flex-direction: column;
 }
 
-#bio-field {
-    margin-bottom: 5px;
-    border: 1px solid rgb(121, 121, 121);
-    height: 100px;
+.profile-container .bio-container label {
+    color: rgb(207, 204, 204);
+    align-self: flex-end;
 }
 
-.app-profile-container .bio-container .bio-editor button {
-    width: 100px;
+#bio-field {
+    margin-bottom: 10px;
+    padding: 5px;
+    font-size: 17px;
+    border: 1px solid rgb(121, 121, 121);
+    height: 80px;
+    resize: none;
+}
+
+#bio-field:focus {
+    outline: none;
+    border: 2px solid rgb(121, 121, 121);
+}
+
+.profile-container .bio-container .bio-editor button {
+    width: 150px;
+    font-size: 19px;
     letter-spacing: 1px;
     padding: 0;
     background-color: #fff;
     border: none;
-    font-size: inherit;
     cursor: pointer;
     align-self: center;
 }
 
+.profile-container .bio-container .bio-editor button:focus,
+.profile-container .bio-container .bio-editor button:hover {
+    outline: none;
+    opacity: 0.7;
+}
+
+.profile-container .bio-container .bio-editor button:active {
+    opacity: 0.5;
+}
+
+.profile-container .bio-container .bio {
+    max-width: 400px;
+    margin-bottom: 10px;
+}
+
+.profile-container .bio-container .edit-bio-btn {
+    text-decoration: underline;
+    color: rgb(121, 121, 121);
+    cursor: pointer;
+}
+
 /* ////////////// OTHER STUFF //////////////// */
 
+.wannabe-container,
+.friend-container {
+    display: flex;
+    align-items: center;
+}
+
+.wannabe-container .friends-profile-pic-container,
+.friend-container .friends-profile-pic-container {
+    margin-right: 10px;
+}
 
 
 
-
-
-.search-container .search-user-profile-pic-container {
+.search-container .search-user-profile-pic-container,
+.friends-profile-pic-container {
     width: 100px;
     height: 100px;
     border-radius: 50%;
