--- a/public/style.css
+++ b/public/style.css
@@ -495,6 +495,123 @@
     cursor: pointer;
 }
 
+/* ********* UPLOADER *********** UPLOADER ******** UPLOADER ************ UPLOADER */
+.uploader-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+}
+
+.uploader-container {
+    font-size: 20px;
+    position: -webkit-sticky;
+    padding: 0 2%;
+    position: sticky;
+    left: 100%;
+    width: 50%;
+    height: 100vh;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.uploader-container .close-uploader {
+    position: absolute;
+    left: 3%;
+    top: 2%;
+    cursor: pointer;
+}
+
+.uploader-container h1 {
+    font-size: 45px;
+    letter-spacing: 2px;
+    align-self: flex-end;
+    color: rgb(207, 204, 204);
+    margin-bottom: 20px;
+}
+
+.uploader-container h3 {
+    align-self: start;
+    font-size: 20px;
+}
+
+.uploader-container .error-field {
+    font-size: 16px;
+    align-self: flex-start;
+}
+
+.uploader-container .img-upload-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 70px;
+}
+
+#profile-pic-input {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.uploader-container .upload-btn {
+    padding: 10px 0;
+    border-bottom: 1px solid rgb(121, 121, 121);
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+}
+
+.uploader-container .img-upload-container button {
+    border: none;
+    background-color: white;
+    font-size: inherit;
+    padding: 10px 0;
+    border-bottom: 1px solid rgb(121, 121, 121);
+    width: 100%;
+    cursor: pointer;
+}
+
+.uploader-container .menu-link {
+    padding: 10px 0;
+    border-bottom: 1px solid rgb(121, 121, 121);
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+.uploader-container .upload-btn:hover,
+.uploader-container .upload-btn:hover:focus,
+.uploader-container .img-upload-container button:hover,
+.uploader-container .img-upload-container button:focus,
+.uploader-container .menu-link:hover,
+.uploader-container .menu-link:focus {
+    outline: none;
+    opacity: 0.7;
+}
+
+.uploader-container .upload-btn:active,
+.uploader-container .img-upload-container button:active,
+.uploader-container .menu-link:active {
+    opacity: 0.5;
+}
+
+
+
 /* ////////////// OTHER STUFF //////////////// */
 
 .wannabe-container,
