--- a/public/style.css
+++ b/public/style.css
@@ -845,7 +845,34 @@
 }
 
 /* ////////////// OTHER STUFF //////////////// */
+.chat-messages-container {
+    width: 90%;
+    height: 100px;
+    border: 1px solid rgb(121, 121, 121);
+    overflow: scroll;
+}
 
+.message-container {
+    display: flex;
+    align-items: center;
+    padding: 5px 10px;
+}
 
+.chat-user-container {
+    display: flex;
+    align-items: center;
+}
 
+.chat-profile-pic-container {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+}
 
+.chat-profile-pic {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
