--- a/public/style.css
+++ b/public/style.css
@@ -410,7 +410,7 @@
 .app-container .profile-container {
     display: grid;
     width: 100%;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 3fr 2fr;
 }
 
 .app-container .profile-pic-section {
