--- a/public/style.css
+++ b/public/style.css
@@ -410,7 +410,7 @@
 .app-container .profile-container {
     display: grid;
     width: 100%;
-    grid-template-columns: 1fr 3fr 2fr;
+    grid-template-columns: 20% 50% 30%;
 }
 
 .app-container .profile-pic-section {
@@ -451,7 +451,8 @@
 }
 
 
-.profile-container .bio-container .add-bio-btn {
+.profile-container .bio-container .add-bio-btn,
+.delete-profile-btn {
     text-decoration: underline;
     font-size: 17px;
     cursor: pointer;
@@ -460,14 +461,17 @@
 .bio-container .add-bio-btn:hover,
 .bio-container .add-bio-btn:focus,
 .bio-container .edit-bio-btn:hover,
-.bio-container .edit-bio-btn:focus {
+.bio-container .edit-bio-btn:focus,
+.delete-profile-btn:hover,
+.delete-profile-btn:focus {
     transition: color 0.3;
     outline: none;
     color: blue;
 }
 
 .bio-container .add-bio-btn:active,
-.bio-container .edit-bio-btn:active {
+.bio-container .edit-bio-btn:active
+.delete-profile-btn:active {
     opacity: 0.5;
 }
 
@@ -533,10 +537,10 @@
 .friend-btn {
     margin-top: 15px;
     border: 1px solid rgb(121, 121, 121);
-    padding: 10px 0;
-    width: 85%;
+    padding: 7px 0;
+    width: 60%;
     background-color: #fff;
-    font-size: 20px;
+    font-size: 18px;
     cursor: pointer;
 }
 
@@ -550,6 +554,12 @@
 
 .friend-btn:active {
     opacity: 0.5;
+}
+
+.other-profile-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 /* ********* UPLOADER *********** UPLOADER ******** UPLOADER ************ UPLOADER */
@@ -968,3 +978,94 @@
     outline: none;
     border: 2px solid blue;
 }
+
+/* DELETE COMPONENT ***********+ DELETE COMPONENT *************** DELETE COMPONENT */
+.are-you-sure-overlay {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+}
+
+.are-you-sure-container {
+    background: white;
+    z-index: 2;
+    width: 40%;
+    height: 200px;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.ays-btn-container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.ays-btn {
+    font-size: 20px;
+    width: 100px;
+    padding: 10px 0;
+    border: 1px solid rgb(121, 121, 121);
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+.ays-btn:hover {
+    transition: color 0.3s, border 0.3s;
+    color: blue;
+    border: 1px solid blue;
+}
+
+.ays-btn:active {
+    opacity: 0.5;
+}
+
+/* FRIENDS OF FRIEND COMPONENT ****************** FRIENDS OF FRIEND COMPONENT *************** */
+.friends-of-friend-component-container {
+    border-left: 1px solid rgb(207, 204, 204);
+    height: 260px;
+    padding-left: 15px;
+    overflow-y: scroll;
+}
+
+.friends-of-friend-container {
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+    color: black;
+    text-decoration: none;
+}
+
+.friends-of-friend-container:hover,
+.friends-of-friend-container:focus {
+    outline: none;
+    background-color: rgb(233, 229, 229);
+}
+
+.friends-of-friend-container:active {
+    opacity: 0.7;
+}
+
+.friend-of-friend-profile-pic-container {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+    flex-shrink: 0;
+}
+
+/* .friend-of-friend-container p {
+    color: black;
+    text-decoration: none;
+} */
